# philo-chat-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
bot/: config.py  db.py  dependencies.py  formatter.py  philo_chat.py
bot/core/: chat.py  philo_chat.py  user.py
bot/models/: __init__.py  chat.py  philo_chat.py  user.py
bot/services/: philo_chat.py
bot/utils/: __init__.py  format_response.py  rate_limit.py  run_completion.py  summarizer.py
