[project]
name = "philo-chat-bot"
version = "0.1.0"
authors = [{ name = "Erfan Moosavi", email = "erfanmoosavi84@gmail.com" }]
description = "Chat with your favorite philosophers - Nietzsche, Socrates, and more!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.32.0",
    "pydantic-settings>=2.13.1",
    "pytelegrambotapi>=4.33.0",
    "sqlalchemy>=2.0.49",
]
